tinycParser.cpp

// Generated from tinyc.g4 by ANTLR 4.7.2


#include "tinycListener.h"

#include "tinycParser.h"


using namespace antlrcpp;
using namespace antlr4;

tinycParser::tinycParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

tinycParser::~tinycParser() {
  delete _interpreter;
}

std::string tinycParser::getGrammarFileName() const {
  return "tinyc.g4";
}

const std::vector<std::string>& tinycParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& tinycParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- StartContext ------------------------------------------------------------------

tinycParser::StartContext::StartContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tinycParser::ProgramContext* tinycParser::StartContext::program() {
  return getRuleContext<tinycParser::ProgramContext>(0);
}

tree::TerminalNode* tinycParser::StartContext::EOF() {
  return getToken(tinycParser::EOF, 0);
}


size_t tinycParser::StartContext::getRuleIndex() const {
  return tinycParser::RuleStart;
}

void tinycParser::StartContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<tinycListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStart(this);
}

void tinycParser::StartContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<tinycListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStart(this);
}

tinycParser::StartContext* tinycParser::start() {
  StartContext *_localctx = _tracker.createInstance<StartContext>(_ctx, getState());
  enterRule(_localctx, 0, tinycParser::RuleStart);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(32);
    program();
    setState(33);
    match(tinycParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ProgramContext ------------------------------------------------------------------

tinycParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tinycParser::StatementContext* tinycParser::ProgramContext::statement() {
  return getRuleContext<tinycParser::StatementContext>(0);
}

tinycParser::ProgramContext* tinycParser::ProgramContext::program() {
  return getRuleContext<tinycParser::ProgramContext>(0);
}


size_t tinycParser::ProgramContext::getRuleIndex() const {
  return tinycParser::RuleProgram;
}

void tinycParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<tinycListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void tinycParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<tinycListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}

tinycParser::ProgramContext* tinycParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 2, tinycParser::RuleProgram);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(39);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(35);
      statement();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(36);
      statement();
      setState(37);
      program();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

tinycParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tinycParser::DeclContext* tinycParser::StatementContext::decl() {
  return getRuleContext<tinycParser::DeclContext>(0);
}

tinycParser::AssignContext* tinycParser::StatementContext::assign() {
  return getRuleContext<tinycParser::AssignContext>(0);
}

tinycParser::BranchContext* tinycParser::StatementContext::branch() {
  return getRuleContext<tinycParser::BranchContext>(0);
}

tinycParser::OutContext* tinycParser::StatementContext::out() {
  return getRuleContext<tinycParser::OutContext>(0);
}

tinycParser::LoopContext* tinycParser::StatementContext::loop() {
  return getRuleContext<tinycParser::LoopContext>(0);
}


size_t tinycParser::StatementContext::getRuleIndex() const {
  return tinycParser::RuleStatement;
}

void tinycParser::StatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<tinycListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStatement(this);
}

void tinycParser::StatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<tinycListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStatement(this);
}

tinycParser::StatementContext* tinycParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 4, tinycParser::RuleStatement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(52);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case tinycParser::T__6: {
        enterOuterAlt(_localctx, 1);
        setState(41);
        decl();
        setState(42);
        match(tinycParser::T__0);
        break;
      }

      case tinycParser::T__2:
      case tinycParser::T__11:
      case tinycParser::ID:
      case tinycParser::NUMBER: {
        enterOuterAlt(_localctx, 2);
        setState(44);
        assign();
        setState(45);
        match(tinycParser::T__0);
        break;
      }

      case tinycParser::T__9: {
        enterOuterAlt(_localctx, 3);
        setState(47);
        branch();
        break;
      }

      case tinycParser::T__8: {
        enterOuterAlt(_localctx, 4);
        setState(48);
        out();
        setState(49);
        match(tinycParser::T__0);
        break;
      }

      case tinycParser::T__1: {
        enterOuterAlt(_localctx, 5);
        setState(51);
        loop();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LoopContext ------------------------------------------------------------------

tinycParser::LoopContext::LoopContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tinycParser::RelationContext* tinycParser::LoopContext::relation() {
  return getRuleContext<tinycParser::RelationContext>(0);
}

tinycParser::ProgramContext* tinycParser::LoopContext::program() {
  return getRuleContext<tinycParser::ProgramContext>(0);
}


size_t tinycParser::LoopContext::getRuleIndex() const {
  return tinycParser::RuleLoop;
}

void tinycParser::LoopContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<tinycListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLoop(this);
}

void tinycParser::LoopContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<tinycListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitLoop(this);
}

tinycParser::LoopContext* tinycParser::loop() {
  LoopContext *_localctx = _tracker.createInstance<LoopContext>(_ctx, getState());
  enterRule(_localctx, 6, tinycParser::RuleLoop);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(54);
    match(tinycParser::T__1);
    setState(55);
    match(tinycParser::T__2);
    setState(56);
    relation(0);
    setState(57);
    match(tinycParser::T__3);
    setState(58);
    match(tinycParser::T__4);
    setState(59);
    program();
    setState(60);
    match(tinycParser::T__5);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclContext ------------------------------------------------------------------

tinycParser::DeclContext::DeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* tinycParser::DeclContext::ID() {
  return getToken(tinycParser::ID, 0);
}


size_t tinycParser::DeclContext::getRuleIndex() const {
  return tinycParser::RuleDecl;
}

void tinycParser::DeclContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<tinycListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDecl(this);
}

void tinycParser::DeclContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<tinycListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDecl(this);
}

tinycParser::DeclContext* tinycParser::decl() {
  DeclContext *_localctx = _tracker.createInstance<DeclContext>(_ctx, getState());
  enterRule(_localctx, 8, tinycParser::RuleDecl);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(62);
    match(tinycParser::T__6);
    setState(63);
    match(tinycParser::ID);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AssignContext ------------------------------------------------------------------

tinycParser::AssignContext::AssignContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* tinycParser::AssignContext::ID() {
  return getToken(tinycParser::ID, 0);
}

tinycParser::ArithContext* tinycParser::AssignContext::arith() {
  return getRuleContext<tinycParser::ArithContext>(0);
}

tinycParser::RelationContext* tinycParser::AssignContext::relation() {
  return getRuleContext<tinycParser::RelationContext>(0);
}


size_t tinycParser::AssignContext::getRuleIndex() const {
  return tinycParser::RuleAssign;
}

void tinycParser::AssignContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<tinycListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAssign(this);
}

void tinycParser::AssignContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<tinycListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAssign(this);
}

tinycParser::AssignContext* tinycParser::assign() {
  AssignContext *_localctx = _tracker.createInstance<AssignContext>(_ctx, getState());
  enterRule(_localctx, 10, tinycParser::RuleAssign);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(69);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(65);
      match(tinycParser::ID);
      setState(66);
      match(tinycParser::T__7);
      setState(67);
      arith(0);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(68);
      relation(0);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- OutContext ------------------------------------------------------------------

tinycParser::OutContext::OutContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tinycParser::ExprContext* tinycParser::OutContext::expr() {
  return getRuleContext<tinycParser::ExprContext>(0);
}

tree::TerminalNode* tinycParser::OutContext::STRING() {
  return getToken(tinycParser::STRING, 0);
}


size_t tinycParser::OutContext::getRuleIndex() const {
  return tinycParser::RuleOut;
}

void tinycParser::OutContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<tinycListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterOut(this);
}

void tinycParser::OutContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<tinycListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitOut(this);
}

tinycParser::OutContext* tinycParser::out() {
  OutContext *_localctx = _tracker.createInstance<OutContext>(_ctx, getState());
  enterRule(_localctx, 12, tinycParser::RuleOut);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(80);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(71);
      match(tinycParser::T__8);
      setState(72);
      match(tinycParser::T__2);
      setState(73);
      expr();
      setState(74);
      match(tinycParser::T__3);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(76);
      match(tinycParser::T__8);
      setState(77);
      match(tinycParser::T__2);
      setState(78);
      match(tinycParser::STRING);
      setState(79);
      match(tinycParser::T__3);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BranchContext ------------------------------------------------------------------

tinycParser::BranchContext::BranchContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tinycParser::RelationContext* tinycParser::BranchContext::relation() {
  return getRuleContext<tinycParser::RelationContext>(0);
}

std::vector<tinycParser::ProgramContext *> tinycParser::BranchContext::program() {
  return getRuleContexts<tinycParser::ProgramContext>();
}

tinycParser::ProgramContext* tinycParser::BranchContext::program(size_t i) {
  return getRuleContext<tinycParser::ProgramContext>(i);
}


size_t tinycParser::BranchContext::getRuleIndex() const {
  return tinycParser::RuleBranch;
}

void tinycParser::BranchContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<tinycListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBranch(this);
}

void tinycParser::BranchContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<tinycListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBranch(this);
}

tinycParser::BranchContext* tinycParser::branch() {
  BranchContext *_localctx = _tracker.createInstance<BranchContext>(_ctx, getState());
  enterRule(_localctx, 14, tinycParser::RuleBranch);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(102);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(82);
      match(tinycParser::T__9);
      setState(83);
      match(tinycParser::T__2);
      setState(84);
      relation(0);
      setState(85);
      match(tinycParser::T__3);
      setState(86);
      match(tinycParser::T__4);
      setState(87);
      program();
      setState(88);
      match(tinycParser::T__5);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(90);
      match(tinycParser::T__9);
      setState(91);
      match(tinycParser::T__2);
      setState(92);
      relation(0);
      setState(93);
      match(tinycParser::T__3);
      setState(94);
      match(tinycParser::T__4);
      setState(95);
      program();
      setState(96);
      match(tinycParser::T__5);
      setState(97);
      match(tinycParser::T__10);
      setState(98);
      match(tinycParser::T__4);
      setState(99);
      program();
      setState(100);
      match(tinycParser::T__5);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExprContext ------------------------------------------------------------------

tinycParser::ExprContext::ExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* tinycParser::ExprContext::NUMBER() {
  return getToken(tinycParser::NUMBER, 0);
}

tree::TerminalNode* tinycParser::ExprContext::ID() {
  return getToken(tinycParser::ID, 0);
}

tinycParser::InputContext* tinycParser::ExprContext::input() {
  return getRuleContext<tinycParser::InputContext>(0);
}


size_t tinycParser::ExprContext::getRuleIndex() const {
  return tinycParser::RuleExpr;
}

void tinycParser::ExprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<tinycListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExpr(this);
}

void tinycParser::ExprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<tinycListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExpr(this);
}

tinycParser::ExprContext* tinycParser::expr() {
  ExprContext *_localctx = _tracker.createInstance<ExprContext>(_ctx, getState());
  enterRule(_localctx, 16, tinycParser::RuleExpr);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(107);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case tinycParser::NUMBER: {
        enterOuterAlt(_localctx, 1);
        setState(104);
        match(tinycParser::NUMBER);
        break;
      }

      case tinycParser::ID: {
        enterOuterAlt(_localctx, 2);
        setState(105);
        match(tinycParser::ID);
        break;
      }

      case tinycParser::T__11: {
        enterOuterAlt(_localctx, 3);
        setState(106);
        input();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ReadContext ------------------------------------------------------------------

tinycParser::ReadContext::ReadContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t tinycParser::ReadContext::getRuleIndex() const {
  return tinycParser::RuleRead;
}

void tinycParser::ReadContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<tinycListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterRead(this);
}

void tinycParser::ReadContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<tinycListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitRead(this);
}

tinycParser::ReadContext* tinycParser::read() {
  ReadContext *_localctx = _tracker.createInstance<ReadContext>(_ctx, getState());
  enterRule(_localctx, 18, tinycParser::RuleRead);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(109);
    match(tinycParser::T__11);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ArithContext ------------------------------------------------------------------

tinycParser::ArithContext::ArithContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tinycParser::ExprContext* tinycParser::ArithContext::expr() {
  return getRuleContext<tinycParser::ExprContext>(0);
}

std::vector<tinycParser::ArithContext *> tinycParser::ArithContext::arith() {
  return getRuleContexts<tinycParser::ArithContext>();
}

tinycParser::ArithContext* tinycParser::ArithContext::arith(size_t i) {
  return getRuleContext<tinycParser::ArithContext>(i);
}

tinycParser::Arithmetic_operatorContext* tinycParser::ArithContext::arithmetic_operator() {
  return getRuleContext<tinycParser::Arithmetic_operatorContext>(0);
}


size_t tinycParser::ArithContext::getRuleIndex() const {
  return tinycParser::RuleArith;
}

void tinycParser::ArithContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<tinycListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterArith(this);
}

void tinycParser::ArithContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<tinycListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitArith(this);
}


tinycParser::ArithContext* tinycParser::arith() {
   return arith(0);
}

tinycParser::ArithContext* tinycParser::arith(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  tinycParser::ArithContext *_localctx = _tracker.createInstance<ArithContext>(_ctx, parentState);
  tinycParser::ArithContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 20;
  enterRecursionRule(_localctx, 20, tinycParser::RuleArith, precedence);

    

  auto onExit = finally([=] {
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(117);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case tinycParser::T__11:
      case tinycParser::ID:
      case tinycParser::NUMBER: {
        setState(112);
        expr();
        break;
      }

      case tinycParser::T__2: {
        setState(113);
        match(tinycParser::T__2);
        setState(114);
        arith(0);
        setState(115);
        match(tinycParser::T__3);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
    _ctx->stop = _input->LT(-1);
    setState(125);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        _localctx = _tracker.createInstance<ArithContext>(parentContext, parentState);
        pushNewRecursionContext(_localctx, startState, RuleArith);
        setState(119);

        if (!(precpred(_ctx, 2))) throw FailedPredicateException(this, "precpred(_ctx, 2)");
        setState(120);
        arithmetic_operator();
        setState(121);
        arith(3); 
      }
      setState(127);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- RelationContext ------------------------------------------------------------------

tinycParser::RelationContext::RelationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tinycParser::ArithContext* tinycParser::RelationContext::arith() {
  return getRuleContext<tinycParser::ArithContext>(0);
}

std::vector<tinycParser::RelationContext *> tinycParser::RelationContext::relation() {
  return getRuleContexts<tinycParser::RelationContext>();
}

tinycParser::RelationContext* tinycParser::RelationContext::relation(size_t i) {
  return getRuleContext<tinycParser::RelationContext>(i);
}

tinycParser::Logic_operatorContext* tinycParser::RelationContext::logic_operator() {
  return getRuleContext<tinycParser::Logic_operatorContext>(0);
}

tinycParser::Comparison_operatorContext* tinycParser::RelationContext::comparison_operator() {
  return getRuleContext<tinycParser::Comparison_operatorContext>(0);
}


size_t tinycParser::RelationContext::getRuleIndex() const {
  return tinycParser::RuleRelation;
}

void tinycParser::RelationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<tinycListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterRelation(this);
}

void tinycParser::RelationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<tinycListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitRelation(this);
}


tinycParser::RelationContext* tinycParser::relation() {
   return relation(0);
}

tinycParser::RelationContext* tinycParser::relation(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  tinycParser::RelationContext *_localctx = _tracker.createInstance<RelationContext>(_ctx, parentState);
  tinycParser::RelationContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 22;
  enterRecursionRule(_localctx, 22, tinycParser::RuleRelation, precedence);

    

  auto onExit = finally([=] {
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(134);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx)) {
    case 1: {
      setState(129);
      arith(0);
      break;
    }

    case 2: {
      setState(130);
      match(tinycParser::T__2);
      setState(131);
      relation(0);
      setState(132);
      match(tinycParser::T__3);
      break;
    }

    }
    _ctx->stop = _input->LT(-1);
    setState(146);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 10, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        setState(144);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 9, _ctx)) {
        case 1: {
          _localctx = _tracker.createInstance<RelationContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleRelation);
          setState(136);

          if (!(precpred(_ctx, 3))) throw FailedPredicateException(this, "precpred(_ctx, 3)");
          setState(137);
          logic_operator();
          setState(138);
          relation(4);
          break;
        }

        case 2: {
          _localctx = _tracker.createInstance<RelationContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleRelation);
          setState(140);

          if (!(precpred(_ctx, 2))) throw FailedPredicateException(this, "precpred(_ctx, 2)");
          setState(141);
          comparison_operator();
          setState(142);
          relation(3);
          break;
        }

        } 
      }
      setState(148);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 10, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- InputContext ------------------------------------------------------------------

tinycParser::InputContext::InputContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tinycParser::ReadContext* tinycParser::InputContext::read() {
  return getRuleContext<tinycParser::ReadContext>(0);
}


size_t tinycParser::InputContext::getRuleIndex() const {
  return tinycParser::RuleInput;
}

void tinycParser::InputContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<tinycListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterInput(this);
}

void tinycParser::InputContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<tinycListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitInput(this);
}

tinycParser::InputContext* tinycParser::input() {
  InputContext *_localctx = _tracker.createInstance<InputContext>(_ctx, getState());
  enterRule(_localctx, 24, tinycParser::RuleInput);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(149);
    read();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Arithmetic_operatorContext ------------------------------------------------------------------

tinycParser::Arithmetic_operatorContext::Arithmetic_operatorContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* tinycParser::Arithmetic_operatorContext::ADD() {
  return getToken(tinycParser::ADD, 0);
}

tree::TerminalNode* tinycParser::Arithmetic_operatorContext::SUB() {
  return getToken(tinycParser::SUB, 0);
}

tree::TerminalNode* tinycParser::Arithmetic_operatorContext::MUL() {
  return getToken(tinycParser::MUL, 0);
}

tree::TerminalNode* tinycParser::Arithmetic_operatorContext::DIV() {
  return getToken(tinycParser::DIV, 0);
}

tree::TerminalNode* tinycParser::Arithmetic_operatorContext::MOD() {
  return getToken(tinycParser::MOD, 0);
}


size_t tinycParser::Arithmetic_operatorContext::getRuleIndex() const {
  return tinycParser::RuleArithmetic_operator;
}

void tinycParser::Arithmetic_operatorContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<tinycListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterArithmetic_operator(this);
}

void tinycParser::Arithmetic_operatorContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<tinycListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitArithmetic_operator(this);
}

tinycParser::Arithmetic_operatorContext* tinycParser::arithmetic_operator() {
  Arithmetic_operatorContext *_localctx = _tracker.createInstance<Arithmetic_operatorContext>(_ctx, getState());
  enterRule(_localctx, 26, tinycParser::RuleArithmetic_operator);
  size_t _la = 0;
